--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ wp-content/backups/
 wp-content/blogs.dir/
 wp-content/cache/
 wp-content/upgrade/
+wp-content/uploads/wpcf7_captcha/
 #wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/
