--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ wp-content/upgrade/
 wp-content/uploads/wpcf7_captcha/
 #wp-content/uploads/
 wp-content/wp-cache-config.php
-wp-content/plugins/
+#wp-content/plugins/
 wp-content/debug.log
 nbproject/
 
